--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://eva-lm.github.io/harry-potter-spells",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
